--- a/css/main.css
+++ b/css/main.css
@@ -4137,3 +4137,17 @@ article.blog-single .blog-content {
         display: none;
     }
 }
+
+body::-webkit-scrollbar {
+    width: 8px;               /* width of the entire scrollbar */
+  }
+  
+  body::-webkit-scrollbar-track {
+    background: white;        /* color of the tracking area */
+  }
+  
+  body::-webkit-scrollbar-thumb {
+    background-color: #862121;    /* color of the scroll thumb */
+    border-radius: 20px;       /* roundness of the scroll thumb */
+    border: 3px solid #862121;  /* creates padding around scroll thumb */
+  }
