--- a/css/main.css
+++ b/css/main.css
@@ -2224,6 +2224,7 @@ html.no-csstransitions .home-content__main {
     position: relative;
     text-align: left;
     margin-top: 3.6rem;
+    margin: center;
 }
 
 .timeline::before {
@@ -2241,6 +2242,7 @@ html.no-csstransitions .home-content__main {
     position: relative;
     padding-left: 8rem;
     min-height: 28.8rem;
+    
 }
 
 .timeline__bullet {
@@ -4143,11 +4145,24 @@ body::-webkit-scrollbar {
   }
   
   body::-webkit-scrollbar-track {
-    background: white;        /* color of the tracking area */
+    background: white; 
+    opacity: 0;
   }
   
   body::-webkit-scrollbar-thumb {
     background-color: #862121;    /* color of the scroll thumb */
-    border-radius: 20px;       /* roundness of the scroll thumb */
+          /* roundness of the scroll thumb */
     border: 3px solid #862121;  /* creates padding around scroll thumb */
   }
+
+  #particles-js {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: url("https://i.ibb.co/pdrTPTM/UnaiBG.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 50%;
+  }
+  
+
